--- a/results/MoveToGoalBrain/configuration.yaml
+++ b/results/MoveToGoalBrain/configuration.yaml
@@ -3,16 +3,16 @@ behaviors:
   MoveToGoal:
     trainer_type: ppo
     hyperparameters:
-      batch_size: 1024
-      buffer_size: 10240
+      batch_size: 10
+      buffer_size: 100
       learning_rate: 0.0003
-      beta: 0.005
+      beta: 0.0005
       epsilon: 0.2
-      lambd: 0.95
+      lambd: 0.99
       num_epoch: 3
       shared_critic: false
       learning_rate_schedule: linear
-      beta_schedule: linear
+      beta_schedule: constant
       epsilon_schedule: linear
     checkpoint_interval: 500000
     network_settings:
@@ -40,7 +40,7 @@ behaviors:
     even_checkpoints: false
     max_steps: 500000
     time_horizon: 64
-    summary_freq: 50000
+    summary_freq: 10000
     threaded: false
     self_play: null
     behavioral_cloning: null
@@ -68,8 +68,8 @@ checkpoint_settings:
   run_id: MoveToGoalBrain
   initialize_from: null
   load_model: false
-  resume: false
-  force: true
+  resume: true
+  force: false
   train_model: false
   inference: false
   results_dir: results
